# ecosystem

./: CMakeLists.txt  README.md
doc/: Diagrams.pptx  Doxyfile  Doxygen  README.md
histories/test/0_to_999/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+476 more)
histories/test2/0_to_999/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+20 more)
histories/test3/0_to_999/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  (+547 more)
src/: Simple ecosystem.py  ecosystem.py  gui.py
src/Cpp_version/: ecosystem.cpp
src/cpp/: ExperimentInterface.cpp  ExperimentInterface.h  ecosystem.cpp  ecosystem.h  main.cpp  tgaimage.cpp
src/cpp_version/: Ecosystem scheme.docx  ExperimentInterface.cpp  ExperimentInterface.h  README.md  compile_ecosystem.sh  ecosystem.cpp  ecosystem.h  main.cpp
src/engine/: ExperimentInterface.cpp  ExperimentInterface.hpp  ecosystem.cpp  ecosystem.hpp  main.cpp
src/python/: gui.py
src/python_bindings/: bindings.cpp
(+1066 files in other folders)
